[project]
name = "mlflow-oidc"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "mlflow[auth]>=3.3.2",
    "mlflow-oidc-auth[caching-redis,fastapi,full]==5.6.1",
    "boto3>=1.37.34",
    "azure-storage-blob>=12.25.1",
    "azure-identity>=1.21.0",
    "google-cloud-storage>=3.1.0",
    "psycopg2-binary (==2.9.10)",
    "tensorflow>=2.20.0",
    "psutil>=7.0.0",
]
